shopfront/shop-front/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopfront
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shopfront
  template:
    metadata:
      labels:
        app: shopfront
    spec:
      containers:
        - name: shopfront
          image: moredatta574/shopfront
          imagePullPolicy: Always
          ports:
            - containerPort: 8010
