shopfront/shop-front/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopfront
spec:
  selector:
    app: shopfront
  ports:
    - name: http
      port: 80
      targetPort: 8010
